2008-03-31  Jb Evain  <jbevain@novell.com>

	Integrate patches from Dzintars Avots <davots@coverity.com>

	* Mono.Cecil/MethodBody.cs (Clone): clone the name of
	the local variables.

2008-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/ReflectionReader.cs:
		Avoid creating a BinaryReader+MemoryStream on LE archs for
		GetConstant. Saves about 400KB for Gendarme.
		Avoid a BinaryReader creation in GetConstant which saves
		about 50KB for Gendarme.
	* Mono.Cecil.Metadata/GuidHeap.cs:
		Compute ideal capacity for Hashtable. Avoid memory allocation
		if a single GUID is present (which is the case for all of
		Mono 2.0 assemblies). Saves a whole 2KB for Gendarme ;-)
	* Mono.Cecil.Binary/Image.cs:
		Add internal GetSectionAtVirtualAddress to avoid creating
		BinaryReader in some cases.
	* Mono.Cecil.Binary/ResourceReader.cs:
		Avoid a BinaryReader creation in SetInitialValue which saves
		about 3000KB for Gendarme.

2008-03-08  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/CopyImageVisitor.cs:
		Copy the cliheaders flags over the new assembly.
		Patch by Oleksiy Gapotchenko <alex.s.gap@gmail.com>

2008-03-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Cil/CodeReader.cs:
		Use one and only Hashtable for caching instructions offsets.
		Save tons of precious memory.

2008-03-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Cil/OpCode.cs
	* Mono.Cecil.Binary/RVA.cs
	* Mono.Cecil.Binary/DataDirectory.cs:
		Avoid boxing/unboxing when == or != operators are used.
		Results in significant memory savings for Gendarme.

2008-03-08  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs:
		Protect from malformed RIDs.
	* Mono.Cecil/AggressiveReflectionReader.cs:
		Create the m_events and m_properties tables
		even if they contains 0 elements.

2008-02-26  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/ImageReader.cs:
		Avoid throwing non desired exceptions.

2008-02-25  Jb Evain  <jbevain@novell.com>
